deploy/apigw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../build.yaml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: apigw
  name: apigw
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apigw
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../build.yaml
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/mesher-default: "true"
        io.kompose.service: apigw
    spec:
      containers:
        - image: ghcr.io/tsvetislavrangelov/mesher-apigw:master
          name: apigw
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
      restartPolicy: Always
