deploy/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../build.yaml
    kompose.service.type: LoadBalancer
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../build.yaml
        kompose.service.type: LoadBalancer
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/mesher-default: "true"
        io.kompose.service: client
    spec:
      containers:
        - image: ghcr.io/tsvetislavrangelov/mesher-web-client:master
          name: client
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
