deploy/generator-history-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: generator-history
  name: generator-history
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: generator-history
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/generatorhistory-default: "true"
        io.kompose.service: generator-history
    spec:
      containers:
        - image: ghcr.io/tsvetislavrangelov/generator-history:master
          imagePullPolicy: Always
          name: generator-history
          ports:
            - containerPort: 8080
      restartPolicy: Always
