deploy/apigw-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../build.yaml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: apigw
  name: apigw
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: apigw
