deploy/client-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../build.yaml
    kompose.service.type: LoadBalancer
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: client-tcp
  name: client-tcp
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: client
  type: LoadBalancer
