deploy/model-collection-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: model-collection
  name: model-collection
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: model-collection
