deploy/eg-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: geometrygeneratornonsampled
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - name: geometrygeneratornonsampled
          port: 8080
