deploy/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "mesher.api"
spec:
  ingressClassName: nginx
  rules:
  - host: "mesher.api"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: geometrygeneratornonsampled
              port:
                number: 8080
